@@ -4,6 +4,11 @@ Changelog
 2.1.11 (unreleased)
 -------------------
 
+- Add the ability for the navtree strategy to suppliment the query.
+  Fixes a problem where the listing of default pages in navigation
+  trees could no longer be enabled.
+  [rossp]
+
 - Added on body a class related to subsite.
   The class is named site-x where x is navigation root object id.
   [thomasdesvenain]
